--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("/images/herobanner.jpg");
+  background-image: url("herobanner.jpg");
   min-height: 100%;
 }
 
