--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide"><img src="images/mamome_logo_black_3pt.webp"></a>
+    <a href="#home" class="w3-bar-item w3-button w3-wide"><img src="mamome_logo_black_3pt.webp"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
@@ -88,7 +88,7 @@ body, html {
       <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="images/about.jpg" alt="Buildings" width="700" height="394">
+      <img class="w3-image w3-round-large" src="about.jpg" alt="Buildings" width="700" height="394">
     </div>
   </div>
 </div>
@@ -133,15 +133,15 @@ body, html {
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
     <h3>Partners</h3>
   <div class="w3-third">
-    <span class="w3-xxlarge"><img src="images/nypresbyterian.webp"></span>
+    <span class="w3-xxlarge"><img src="nypresbyterian.webp"></span>
     <br>
   </div>
   <div class="w3-third">
-    <span class="w3-xxlarge"><img src="images/liubrooklyn.webp"></span>
+    <span class="w3-xxlarge"><img src="liubrooklyn.webp"></span>
     <br>
   </div>
   <div class="w3-third">
-    <span class="w3-xxlarge"><img src="images/uconnhealth.webp" ></span>
+    <span class="w3-xxlarge"><img src="uconnhealth.webp" ></span>
     <br>
   </div>
 </div>
@@ -168,7 +168,7 @@ body, html {
       </p>
     </div>
     <div class="w3-half">
-     <img src="images/ourwork.jpg" width="700" height="394" style="align-content: center; border-radius: 8px;">
+     <img src="ourwork.jpg" width="700" height="394" style="align-content: center; border-radius: 8px;">
     </div>
   </div>
 </div>
